LIVE-274 Fixed video overlay having gaps on taller screens

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -43,7 +43,7 @@
 .black
 	color:black
 
-.videoThumb {
+.scrollItem {
 	position: relative;
 	.liveOverlay, .newOverlay {
 		position: absolute;
